# i_spy_an_agent

./: .gitignore  CLAUDE.md  Makefile  README.md  my_first_RAG_language_agent.ipynb  my_first_language_agent.ipynb  my_first_prompt_language_eval.ipynb  notes.md  pyproject.toml  requirements.txt
.claude/: lessons_learned.md
.claude/agent-memory/rag-language-agent-dev/: MEMORY.md  feedback_kb_lookup_bug.md
.claude/agents/: rag-language-agent-dev.md
.github/workflows/: prompt-eval.yml
configs/: kb.json
evaluations/: fr_it_prompt_eval_v1.json  run_eval.py
evaluations/results/: latest_eval.json
learning/: 001_anthropic_building_with_claude_api.ipynb  002_anthropic_prompt_evals.ipynb  002a_prompt_evals_example.ipynb  003_anthropic_prompting_engineering.ipynb  anthropic_building_with_claude_api_01.ipynb  dataset.json  output.html  output.json
my_agent/: agent.py
prompts/: fr_it_prompt_v1.yml
prompts/classifications/: fr_it_sentiment_nuance_v1.yml
src/: embeddings.py  eval_funcs.py  index_manager.py  knowledge_base.py  llm_fallback.py  prompt_builder.py  rag_chat.py
storage/: default__vector_store.json  docstore.json  index_store.json
