[project]
name = "i_spy_an_agent"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) language agent project"
requires-python = ">=3.10"
dependencies = [
    "llama-index-core>=0.10.0, <0.11.0",
    "llama-index-llms-openai>=0.1.5, <0.2",
    "llama-index-embeddings-openai>=0.1.6, <0.2",
    "openai>=1.3.0, <2.0",
    "python-dotenv>=1.0.0, <2.0",
    "anthropic>=0.86.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/word_translation_agent", "src/eval_funcs"]
